Adaptaciones al diagrama de clases V (Acercamientos a heladera y procesar contribucion en DonacionDeVianda y DistribucionDeVianda)